# research-mcp-server

./: .env.example  README.md  config.py  pyproject.toml  server.py
tests/: test_arxiv_search.py  test_document_search.py  test_server.py  test_web_search.py  test_wikipedia_search.py
tools/: arxiv_search.py  document_search.py  web_search.py  wikipedia_search.py
