[project]
name = "research-mcp-server"
version = "0.1.0"
description = "MCP server exposing multi-source research tools"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.8.0",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "wikipedia-api>=0.6.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]